--- a/temexif.html
+++ b/temexif.html
@@ -57,21 +57,10 @@
           </table>
         </td>
         <td height="33" valign="top" background="images/mnu_08.jpg">
-          <p class="subtitle">Vamos debugar um pouco sobre Raniere?</p> <br>
-          <p class="title1">Sempre buscando solu&ccedil;&otilde;es e otimiza&ccedil;&otilde;es </p>
-          <p class="text style1">Tendo conhecido o mundo da programa&ccedil;&atilde;o ainda no final da década de 1980, aprendido na Escola Técnica Federal de Pernambuco as linguagens Pascal, Basic e a planilha eletrônica SuperCalc, numa época de monitores monocromáticos, sem mouse e com disquetes de 5¼", tive sempre o computador como grande auxiliar em qualquer trabalho que executava, criando pequenos aplicativos para agilizar tarefas repetitivas, planilhas eletrônicas e até alguns sistemas gerenciadores de pequenas empresas, como banca de revistas, farmácia e locadora de veículos. Para uma corretora de seguros, desenvolvi um programa que gerava textos planos em formata&ccedil;&atilde;o específica que eram gravados em disquetes e levados às secretarias onde eram lidos por outros sistemas para a contrata&ccedil;&atilde;o do plano pelos servidores públicos. </p><br>
-          <p class="title1">Vivência em Linux</p>
-          <p class="text">Após um bom conhecimento do SO Windows em todas suas versões, tendo trabalhado como autônomo com manutenção de computadores, dominando do hardware ao SO, atrevi-me num bom desafio, a abandonar o Windows Server 2003, tão doce de se trabalhar, para ingressar no então misterioso mundo Linux.</p>
-          <br>
-          <p class="text">Iniciei com o CentOS e logo me empolguei, migrando, em seguida, para o Fedora 20. </p>
-          <p class="text">&nbsp;</p>
-          <p class="text">Na época da mudança o desenvolvimento de softwares em Linux não dispunha de tantos recursos como hoje, o que me levava muitas vezes a precisar usar máquinas virtuais para emular o Windows dentro do Linux para desenvolver pequenos programas que deveriam rodar no Linux por meio do Wine e atender minhas necessidades domésticas. </p> <br>
-
-          <p class="title1">O que tenho aprontado?</p>
-          <p class="text">No menu à esquerda, screenshots de alguns programas que desenvolvi em Delphi e em Visual Basic.</p>
-          <br>
-          <p class="title1">Em que me concentro hoje?</p>
-          <p class="text">Estudo linguagens mais modernas com seus novos paradigmas da programação, que constroem sistemas mobiles e para web.</p>
+          <p class="subtitle">TemExif</p> <br>
+          <p class="title1">Analisador de metadados em arquivos jpg/Exif</p>
+          <p class="title1">Verifica em lote e marca os arquivos de fotos que não possuem informações de exif. Exibe as informações de exif individualmente e as do arquivo físico.<br>
+          <p><center><img src="images/temexif.jpg" ></center></p>
           <br>
  <br> <br> <br>
         </td>
