Concluída a etapa voltada para Desktop. Próximo passo será a versão voltada para os mobiles.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <! -- ESTA É UMA PÁGINA MERAMENTE COM FINS DE ESTUDOS.
-      BASEADA EM UM TEMPLATE EM HTML 4, TEREI DE ALTERÁ-LA 
+      BASEADA EM UM TEMPLATE EM HTML 4, PRECISEI ALTERÁ-LA 
       PARA HTML 5, SERVINDO, PORTANTO, DE TREINAMENTO EM
       MANUTENÇÃO DE PÁGINAS, BEM COMO, DO USO DO GITHUB -->
 
@@ -16,7 +16,7 @@
   <div id="areamenu">
     <header>
       <hgroup>
-        <h1>Raniere Marinho</h1>
+        <h1>&nbsp;Raniere Marinho</h1>
         <h2>Soluções e Otimizações</h2>
       </hgroup>
     </header> 
