--- a/ohm.html
+++ b/ohm.html
@@ -1,79 +1,61 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   <meta charset="UTF-8"/>
    <title>Raniere Marinho</title>
-   <link href="main.css" type="text/css" rel="stylesheet">
+   <link rel ="stylesheet" type="text/css" href="_css/main.css"/>
 </head>
 
-<body bgcolor="#FFFFFF" >
-<table width="780" border="0" align="center" cellspacing="0" cellpadding="0">
-  <tr bgcolor="#FFFFFF" background="../images/white.gif">
-    <td width="780" height="14" valign="top"><table width="780" border="0" cellspacing="0" cellpadding="0">
-      <tr>
-        <td width="230" height="78"><img src="images/me.jpg" width="230" height="78"></td>
-        <td width="177" height="78" background="images/bg.jpg">&nbsp;</td>
-        <td width="373" valign="bottom" background="images/bg.jpg"><img src="images/slogan.jpg" width="327" height="34"></td>
-      </tr>
-    </table></td>
-  </tr>
-  <tr bgcolor="#FFFFFF" background="../images/white.gif">
-    <td width="780" height="67" valign="top"><img src="images/banner.jpg" width="780" height="67"></td>
-  </tr>
-  <tr bgcolor="#FFFFFF" background="../images/white.gif">
-    <td height="14" valign="top"><table width="780" border="0" cellspacing="0" cellpadding="0">
-      <tr>
-        <td width="177" height="33" background="images/divsupesq.jpg"><img src="images/divsupesq.jpg" width="1" height="33"></td>
-        <td width="603" height="33" background="images/divsupdir.jpg">&nbsp;</td>
-      </tr>
-      <tr>
-        <td height="372" valign="top" background="images/bg1.jpg">
-          <table width="177" border="0" cellspacing="0" cellpadding="0">
-            <tr>
-              <td width="177" height="25"><a href="index.htm"><img src="images/mnu_07.jpg" width="177" height="25" border="0"></a></td>
-            </tr>
-            <tr>
-              <td height="22"><a href="infob.htm"><img src="images/mnu_09.jpg" width="177" height="22" border="0"></a></td>
-            </tr>
-            <tr>
-              <td height="19"><a href="ipl.htm"><img src="images/mnu_10.jpg" width="177" height="19" border="0"></a></td>
-            </tr>
-            <tr>
-              <td height="20"><a href="temexif.htm"><img src="images/mnu_11.jpg" width="177" height="20" border="0"></a></td>
-            </tr>
-            <tr>
-              <td height="20"><a href="epn.htm"><img src="images/mnu_12.jpg" width="177" height="20" border="0"></a></td>
-            </tr>
-            <tr>
-              <td height="21"><a href="ohm.htm"><img src="images/mnu_13.jpg" width="177" height="21" border="0"></a></td>
-            </tr>
-            <tr>
-              <td height="21"><a href="duplic.htm"><img src="images/mnu_14.jpg" width="177" height="21" border="0"></a></td>
-            </tr>
-            <tr>
-              <td height="21"><a href="contato.htm"><img src="images/mnu_cont.jpg" width="177" height="21" border="0"></a></td>
-            </tr>
-          </table>
-        </td>
-        <td height="33" valign="top" background="images/mnu_08.jpg">
-          <p class="subtitle">Ohmímetro</p> <br>
-          <p class="title1">Tradutor de código de cores de resistores</p>
-          <p class="text style1">Traduz e gera códigos de cores de resistores.<br><br>
-<br>
-          <p><center><img src="images/ohm.jpg" ></center></p>
-          <br>
- <br> <br> <br>
-        </td>
-      </tr>
-    </table></td>
-  </tr>
-</table>
+<! -- ESTA É UMA PÁGINA MERAMENTE COM FINS DE ESTUDOS.
+      BASEADA EM UM TEMPLATE EM HTML 4, PRECISEI ALTERÁ-LA 
+      PARA HTML 5, SERVINDO, PORTANTO, DE TREINAMENTO EM
+      MANUTENÇÃO DE PÁGINAS, BEM COMO, DO USO DO GITHUB -->
 
-<table width="780" border="0" align="center" cellpadding="0" cellspacing="0">
-  <tr>
-    <td><p class="grey"></a></p></td>
-  </tr>
-</table>
+<body>  
+
+  <div id="areamenu">
+    <header>
+      <hgroup>
+        <h1>&nbsp;Raniere Marinho</h1>
+        <h2>Soluções e Otimizações</h2>
+      </hgroup>
+    </header> 
+  </div>
+
+  <div id="areabanner">
+      <img class="displayed" src="_imgs\banner.jpg">
+  </div>
+
+  <div id="interface"> <! -- esta div é um container de todo conteúdo da parte inferior página -->
+    <nav id="menu">
+      <h1>Menu Principal</h1> <! -- o css oculta esse texto -->
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="infob.html">Infobasic</a></li>
+        <li><a href="ipl.html">IguaisProLixo</a></li>
+        <li><a href="temexif.html">TemExif</a></li>
+        <li><a href="epn.html">ExifPraNome</a></li>
+        <li><a href="ohm.html">Ohmímetro</a></li>
+        <li><a href="duplic.html">Duplicatas</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </nav>
+
+    <br/>
+
+    <p class="titulo">Ohmímetro</p> 
+
+    <p class="topico">Tradutor de código de cores de resistores</p>
+
+    <p class="textcorpo">Interpreta e gera códigos de cores de resistores para valor numérico, apresentando ao usuário seus valores em Ω (ohm), kΩ e MΩ e determina a tolerância percentual.</p>
+
+    <figure>
+          <img class="screenshot" src="_imgs/ohm.jpg"/>
+    </figure>
+    <figure>
+          <img class="screenshot" src="_imgs/ohm2.jpg"/>
+    </figure>        
+    <br>
+  </div>
 </body>
 </html>
