Correção do email

--- a/contato.html
+++ b/contato.html
@@ -48,7 +48,7 @@
     <p class="topico">E-mail</p>
 
     <p class="textcorpo">
-        <a href="mailto:raniere@ranieremarinho.com">raniere@ranieremarinho.com</a><br/><br/>
+        <a href="mailto:raniere@ranieremarinho.com.br">raniere@ranieremarinho.com.br</a><br/><br/>
     </p>
 
     <p class="topico">Linkedin</p>
