Meu site pessoal   Por meio de JavaScript, ocorre redirecionamento para um dos três sites construídos em HTML 5 e CSS 3. Um para ser carregado em desktop, outro para dispositivos móveis de telas grandes e outro para os de telas menores.

--- a/contato.html
+++ b/contato.html
@@ -6,11 +6,6 @@
    <link rel ="stylesheet" type="text/css" href="_css/main.css"/>
 </head>
 
-<! -- ESTA É UMA PÁGINA MERAMENTE COM FINS DE ESTUDOS.
-      BASEADA EM UM TEMPLATE EM HTML 4, PRECISEI ALTERÁ-LA 
-      PARA HTML 5, SERVINDO, PORTANTO, DE TREINAMENTO EM
-      MANUTENÇÃO DE PÁGINAS, BEM COMO, DO USO DO GITHUB -->
-
 <body>  
 
   <div id="areamenu">
@@ -31,12 +26,7 @@
       <h1>Menu Principal</h1> <! -- o css oculta esse texto -->
       <ul>
         <li><a href="index.html">Início</a></li>
-        <li><a href="infob.html">Infobasic</a></li>
-        <li><a href="ipl.html">IguaisProLixo</a></li>
-        <li><a href="temexif.html">TemExif</a></li>
-        <li><a href="epn.html">ExifPraNome</a></li>
-        <li><a href="ohm.html">Ohmímetro</a></li>
-        <li><a href="duplic.html">Duplicatas</a></li>
+        <li><a href="meustrab.html">Meus Trabalhos</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
