--- a/infob.html
+++ b/infob.html
@@ -6,11 +6,6 @@
    <link rel ="stylesheet" type="text/css" href="_css/main.css"/>
 </head>
 
-<! -- ESTA É UMA PÁGINA MERAMENTE COM FINS DE ESTUDOS.
-      BASEADA EM UM TEMPLATE EM HTML 4, PRECISEI ALTERÁ-LA 
-      PARA HTML 5, SERVINDO, PORTANTO, DE TREINAMENTO EM
-      MANUTENÇÃO DE PÁGINAS, BEM COMO, DO USO DO GITHUB -->
-
 <body>  
 
   <div id="areamenu">
@@ -27,16 +22,12 @@
   </div>
 
   <div id="interface"> <! -- esta div é um container de todo conteúdo da parte inferior página -->
+    <p class="voltar"><a href="meustrab.html">Voltar aos Meus Trabalhos</a></p>
     <nav id="menu">
       <h1>Menu Principal</h1> <! -- o css oculta esse texto -->
       <ul>
         <li><a href="index.html">Início</a></li>
-        <li><a href="infob.html">Infobasic</a></li>
-        <li><a href="ipl.html">IguaisProLixo</a></li>
-        <li><a href="temexif.html">TemExif</a></li>
-        <li><a href="epn.html">ExifPraNome</a></li>
-        <li><a href="ohm.html">Ohmímetro</a></li>
-        <li><a href="duplic.html">Duplicatas</a></li>
+        <li><a href="meustrab.html">Meus Trabalhos</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
@@ -59,6 +50,15 @@
     </figure>
     <figure>
           <img class="screenshot" src="_imgs/info04.jpg"/>
+    </figure>  
+    <figure>
+          <img class="screenshot" src="_imgs/info05.jpg"/>
+    </figure>
+    <figure>
+          <img class="screenshot" src="_imgs/info06.jpg"/>
+    </figure>
+    <figure>
+          <img class="screenshot" src="_imgs/info07.jpg"/>
     </figure>        
     <br>
   </div>
